# whatsupdoc

./: .dockerignore  .env.example  .gcloudignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  PROJECT_PRD.md  README.md  TODO.md  deploy.sh  pyproject.toml  test-widget-server.py  wsgi.py
.claude/commands/: ship.md
.github/workflows/: deploy.yml
cloud-functions/auto-ingest/: README.md  deploy.sh  main.py  requirements.txt
cloud-functions/auto-ingest/tests/: README.md  test_auto_ingest.py
docs/: CHANGELOG.md  DEPLOYMENT.md  DEVELOPMENT.md  WIDGET_BUILD_ISSUE.md
infra/: main.tf
scripts/: deploy.sh  deploy_static.sh  deploy_web.sh  launch_web.py  update_demo_urls.sh  wsgi.py  wsgi_web.py
slack-rag-bot/: app.py  config.py  vertex_search.py
src/: Dockerfile
src/whatsupdoc/: __init__.py  app.py  config.py  error_handler.py  gemini_rag.py  modern_app.py  modern_config.py  modern_gemini_rag.py  modern_slack_bot.py  modern_vertex_rag_client.py  slack_bot.py  vertex_rag_client.py  vertex_search.py
src/whatsupdoc/core/: config.py  error_handler.py  vertex_rag_client.py
src/whatsupdoc/slack/: app.py  slack_bot.py
src/whatsupdoc/web/: api.py  app.py  config.py  gradio_interface.py  middleware.py  models.py  service.py
src/whatsupdoc/web/static/: demo.html
src/whatsupdoc/web/static/widget/: whatsupdoc-widget.js  whatsupdoc-widget.js.map
src/whatsupdoc/web/widget/: README.md  package.json  vite.config.js
src/whatsupdoc/web/widget/src/: whatsupdoc-widget.js
tests/: run_all_tests.py  test-widget-local.html  test-widget-server.py  test_cors_validation.py  test_gcp_connection.py  test_gemini_integration.py  test_modern_config.py  test_modern_error_handler.py  test_package_imports.py  test_rag_engine_connection.py  test_slack_connection.py  test_vertex_search_integration.py
tests/e2e/: README.md  config.example.py  rag_functionality_tester.py  slack_webhook_tester.py  slash_command_tester.py
tests/results/: TEST_RESULTS.md
tests/web/: demo_web_interface.py  test_web_interface.py
