[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whatsupdoc"
version = "0.1.0"
description = "A Slack RAG chatbot using Vertex AI RAG Engine and Gemini"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "whatsupdoc", email = "noreply@example.com"}
]
dependencies = [
    "python-dotenv>=1.0.0",
    "google-auth>=2.23.0",
    "google-genai>=0.1.0",
    "slack-bolt>=1.18.0",
    "requests>=2.28.0",
    "structlog>=23.1.0",
    "flask>=3.0.0",
]

[project.scripts]
whatsupdoc = "whatsupdoc.app:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "requests-mock>=1.11.0",
]

[project.optional-dependencies]
cloud-functions = [
    "functions-framework>=3.5.0",
    "google-cloud-aiplatform>=1.108.0",
    "cloudevents>=1.11.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings"
]
markers = [
    "integration: marks tests as integration tests (may be slow)",
    "unit: marks tests as unit tests (fast)",
    "requires_gcp: marks tests that require GCP credentials",
    "requires_slack: marks tests that require Slack tokens"
]
