[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whatsupdoc"
version = "0.1.0"
description = "A Slack RAG chatbot using Vertex AI RAG Engine and Gemini"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "whatsupdoc", email = "noreply@example.com"}
]
dependencies = [
    "python-dotenv>=1.0.1",
    "google-auth>=2.40.3",
    "google-api-core>=2.15.0",
    "google-genai>=1.29.0",
    "slack-bolt>=1.20.1",
    "requests>=2.32.0",
    "structlog>=24.1.0",
    "flask>=3.1.1",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.0.0",
    "tenacity>=9.0.0",
    "gunicorn>=23.0.0",
    "fastapi>=0.115.12",
    "gradio>=5.0.0",
    "slowapi>=0.1.9",
]

[project.scripts]
whatsupdoc = "whatsupdoc.slack.app:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "requests-mock>=1.12.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-requests>=2.32.0",
    "pre-commit>=3.0.0",
]

[project.optional-dependencies]
cloud-functions = [
    "functions-framework>=3.5.0",
    "google-cloud-aiplatform>=1.108.0",
    "cloudevents>=1.11.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers"
]
markers = [
    "integration: marks tests as integration tests (may be slow)",
    "unit: marks tests as unit tests (fast)",
    "requires_gcp: marks tests that require GCP credentials",
    "requires_slack: marks tests that require Slack tokens"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "C", "I", "N", "D", "UP", "ANN"]
ignore = [
    "D100",    # Missing docstring in public module
    "D104",    # Missing docstring in public package
    "D203",    # 1 blank line required before class docstring (conflicts with D211)
    "D213",    # Multi-line docstring summary should start at the second line (conflicts with D212)
    "D401",    # First line should be in imperative mood
    "D205",    # 1 blank line required between summary line and description
    "D400",    # First line should end with a period
    "D415",    # First line should end with period/question/exclamation
    "D200",    # One-line docstring should fit on one line
    "D101",    # Missing docstring in public class (sometimes not needed)
    "ANN401",  # Dynamically typed expressions (Any) - sometimes necessary
    "UP038",   # Use | instead of Union in isinstance - less readable sometimes
    "C901",    # Too complex - sometimes unavoidable for business logic
    "W293",    # Blank line contains whitespace - auto-fixable but annoying
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
